# HermesDeck

./: .env.example  .gitignore  HERMESDECK_RULES.md  Makefile  README.md  diagram-wrapper.html  docker-compose.yml  hermesdeck-architecture.html  hermesdeck-intro.html  package-lock.json  package.json  shared  test_grpc_multi_turn.js  test_grpc_node.js  test_multi_turn.js  test_multi_ws.js
.pilotdeck/plans/: hermesdeck-gateway-integration.md
docker/: Dockerfile.go  Dockerfile.py
docs/: architecture.md  deployment.md
proto/: hermesdeck.proto
scripts/: fix-dist.sh  gen-proto.sh  run-dev.sh
src/: hermesdeck-gateway.mjs
src/agent/: index.ts
src/always-on/: index.ts
src/cli/: createLocalGateway.ts  pilotdeck.ts
src/extension/: index.ts
src/gateway/: index.ts
src/go/: go.mod  go.sum
src/lifecycle/: index.ts
src/mcp/: index.ts
src/model/: index.ts
src/permission/: index.ts
src/pilot/: index.ts  paths.ts
src/python/: pyproject.toml  requirements.txt  test_multi_turn_direct.py  test_sidecar_direct.py
src/python/hermesdeck_sidecar/: __init__.py  __main__.py  http_bridge.py
src/python/hermesdeck_sidecar/bridge/: client.py  server.py  tool_adapter.py
src/python/hermesdeck_sidecar/hermes_adapter/: agent_wrapper.py  memory_bridge.py  skill_bridge.py
src/python/hermesdeck_sidecar/proto/: hermesdeck_pb2.py  hermesdeck_pb2_grpc.py
src/router/: index.ts
src/task/: index.ts
src/tool/: index.ts
ui/: index.html  tailwind.config.js  vite.config.js
ui/public/: manifest.json
ui/scripts/: fix-node-pty.js
ui/server/: cli.js  load-env.js  (+4 more)
(+405 files in other folders)
